--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "build your own React",
   "main": "ownReact",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --progress"
   },
   "repository": {
     "type": "git",
